# rfm-weather-api

./: CMakeLists.txt  conanfile.py
include/: rfm_weather_api.h  tomorrow_io_weather_api.hpp
src/: tomorrow_io_weather_api.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
